update uszips.csv for NAN lat and lng

--- a/code/data_preparation.ipynb
+++ b/code/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "## load initial raw data\n",
     "\n",
     "# read in zillow raw data\n",
-    "raw_df = pd.read_csv(\"../data/zillow raw data.csv\")\n",
+    "raw_df = pd.read_csv(\"../data/zillowRawData.csv\")\n",
     "# remove unwanted column\n",
     "raw_df = raw_df.drop(['RegionID', 'SizeRank', 'RegionType', 'StateName', 'Metro'], axis=1)\n",
     "# rename column\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -109,8 +109,8 @@
        "      <td>TX</td>\n",
        "      <td>Katy</td>\n",
        "      <td>Fort Bend County</td>\n",
-       "      <td>BaseDate</td>\n",
-       "      <td>2023-12-31</td>\n",
+       "      <td>2000-01-31</td>\n",
+       "      <td>208752.177188</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -120,8 +120,8 @@
        "      <td>NJ</td>\n",
        "      <td>Lakewood</td>\n",
        "      <td>Ocean County</td>\n",
-       "      <td>BaseDate</td>\n",
-       "      <td>2023-12-31</td>\n",
+       "      <td>2000-01-31</td>\n",
+       "      <td>133799.965954</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -131,8 +131,8 @@
        "      <td>TX</td>\n",
        "      <td>Katy</td>\n",
        "      <td>Harris County</td>\n",
-       "      <td>BaseDate</td>\n",
-       "      <td>2023-12-31</td>\n",
+       "      <td>2000-01-31</td>\n",
+       "      <td>102327.332899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -142,8 +142,8 @@
        "      <td>NY</td>\n",
        "      <td>New York</td>\n",
        "      <td>Queens County</td>\n",
-       "      <td>BaseDate</td>\n",
-       "      <td>2023-12-31</td>\n",
+       "      <td>2000-01-31</td>\n",
+       "      <td>147672.475058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -153,111 +153,30 @@
        "      <td>TX</td>\n",
        "      <td>Houston</td>\n",
        "      <td>Harris County</td>\n",
-       "      <td>BaseDate</td>\n",
-       "      <td>2023-12-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80663</th>\n",
-       "      <td>55087</td>\n",
-       "      <td>44.23894</td>\n",
-       "      <td>-93.40614</td>\n",
-       "      <td>MN</td>\n",
-       "      <td>Warsaw</td>\n",
-       "      <td>Rice County</td>\n",
-       "      <td>2024-12-31</td>\n",
-       "      <td>1.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80664</th>\n",
-       "      <td>62093</td>\n",
-       "      <td>39.06858</td>\n",
-       "      <td>-89.84573</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Macoupin County</td>\n",
-       "      <td>2024-12-31</td>\n",
-       "      <td>3.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80665</th>\n",
-       "      <td>77661</td>\n",
-       "      <td>29.78021</td>\n",
-       "      <td>-94.36861</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chambers County</td>\n",
-       "      <td>2024-12-31</td>\n",
-       "      <td>-0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80666</th>\n",
-       "      <td>79078</td>\n",
-       "      <td>35.69856</td>\n",
-       "      <td>-101.55000</td>\n",
-       "      <td>TX</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Hutchinson County</td>\n",
-       "      <td>2024-12-31</td>\n",
-       "      <td>-3.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80667</th>\n",
-       "      <td>95419</td>\n",
-       "      <td>38.42336</td>\n",
-       "      <td>-122.95820</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Camp Meeker</td>\n",
-       "      <td>Sonoma County</td>\n",
-       "      <td>2024-12-31</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2000-01-31</td>\n",
+       "      <td>100957.722364</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>80668 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Zipcode       lat        lng State         City             County  \\\n",
-       "0        77494  29.74566  -95.82302    TX         Katy   Fort Bend County   \n",
-       "1         8701  40.07635  -74.20311    NJ     Lakewood       Ocean County   \n",
-       "2        77449  29.83674  -95.73547    TX         Katy      Harris County   \n",
-       "3        11368  40.74962  -73.85264    NY     New York      Queens County   \n",
-       "4        77084  29.82698  -95.66120    TX      Houston      Harris County   \n",
-       "...        ...       ...        ...   ...          ...                ...   \n",
-       "80663    55087  44.23894  -93.40614    MN       Warsaw        Rice County   \n",
-       "80664    62093  39.06858  -89.84573    IL          NaN    Macoupin County   \n",
-       "80665    77661  29.78021  -94.36861    TX          NaN    Chambers County   \n",
-       "80666    79078  35.69856 -101.55000    TX          NaN  Hutchinson County   \n",
-       "80667    95419  38.42336 -122.95820    CA  Camp Meeker      Sonoma County   \n",
+       "   Zipcode       lat       lng State      City            County        date  \\\n",
+       "0    77494  29.74566 -95.82302    TX      Katy  Fort Bend County  2000-01-31   \n",
+       "1     8701  40.07635 -74.20311    NJ  Lakewood      Ocean County  2000-01-31   \n",
+       "2    77449  29.83674 -95.73547    TX      Katy     Harris County  2000-01-31   \n",
+       "3    11368  40.74962 -73.85264    NY  New York     Queens County  2000-01-31   \n",
+       "4    77084  29.82698 -95.66120    TX   Houston     Harris County  2000-01-31   \n",
        "\n",
-       "             date       value  \n",
-       "0        BaseDate  2023-12-31  \n",
-       "1        BaseDate  2023-12-31  \n",
-       "2        BaseDate  2023-12-31  \n",
-       "3        BaseDate  2023-12-31  \n",
-       "4        BaseDate  2023-12-31  \n",
-       "...           ...         ...  \n",
-       "80663  2024-12-31         1.8  \n",
-       "80664  2024-12-31         3.7  \n",
-       "80665  2024-12-31        -0.6  \n",
-       "80666  2024-12-31        -3.1  \n",
-       "80667  2024-12-31         0.0  \n",
-       "\n",
-       "[80668 rows x 8 columns]"
+       "           value  \n",
+       "0  208752.177188  \n",
+       "1  133799.965954  \n",
+       "2  102327.332899  \n",
+       "3  147672.475058  \n",
+       "4  100957.722364  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,8 +187,279 @@
     "#convert date and value data from wide to tall\n",
     "merge_df = merge_df.melt(id_vars=['Zipcode','lat','lng','State','City','County'],var_name='date',value_name='value')\n",
     "\n",
-    "merge_df"
+    "merge_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+       "&lt;html&gt;\n",
+       "&lt;head&gt;\n",
+       "    \n",
+       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+       "    \n",
+       "        &lt;script&gt;\n",
+       "            L_NO_TOUCH = false;\n",
+       "            L_DISABLE_3D = false;\n",
+       "        &lt;/script&gt;\n",
+       "    \n",
+       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
+       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://code.jquery.com/jquery-1.12.4.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+       "    \n",
+       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+       "            &lt;style&gt;\n",
+       "                #map_6e5ca1f4e6763b9fa7d69229d168db24 {\n",
+       "                    position: relative;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
+       "                    left: 0.0%;\n",
+       "                    top: 0.0%;\n",
+       "                }\n",
+       "                .leaflet-container { font-size: 1rem; }\n",
+       "            &lt;/style&gt;\n",
+       "        \n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.1.0/leaflet.markercluster.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.1.0/MarkerCluster.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.1.0/MarkerCluster.Default.css&quot;/&gt;\n",
+       "&lt;/head&gt;\n",
+       "&lt;body&gt;\n",
+       "    \n",
+       "    \n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_6e5ca1f4e6763b9fa7d69229d168db24&quot; &gt;&lt;/div&gt;\n",
+       "        \n",
+       "&lt;/body&gt;\n",
+       "&lt;script&gt;\n",
+       "    \n",
+       "    \n",
+       "            var map_6e5ca1f4e6763b9fa7d69229d168db24 = L.map(\n",
+       "                &quot;map_6e5ca1f4e6763b9fa7d69229d168db24&quot;,\n",
+       "                {\n",
+       "                    center: [39.8283, -98.5795],\n",
+       "                    crs: L.CRS.EPSG3857,\n",
+       "                    zoom: 4,\n",
+       "                    zoomControl: true,\n",
+       "                    preferCanvas: false,\n",
+       "                }\n",
+       "            );\n",
+       "\n",
+       "            \n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_3f175220029ea77225c8ec2a8eb6032e = L.tileLayer(\n",
+       "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_6e5ca1f4e6763b9fa7d69229d168db24);\n",
+       "        \n",
+       "    \n",
+       "            var marker_cluster_83b2e427540e05d5f4035d71ecd77c1e = L.markerClusterGroup(\n",
+       "                {}\n",
+       "            );\n",
+       "            map_6e5ca1f4e6763b9fa7d69229d168db24.addLayer(marker_cluster_83b2e427540e05d5f4035d71ecd77c1e);\n",
+       "        \n",
+       "&lt;/script&gt;\n",
+       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<folium.folium.Map at 0x15f42ded0>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## visualization\n",
+    "m = folium.Map(location=[39.8283, -98.5795],zoom_start=4)\n",
+    "\n",
+    "marker_cluster = plugins.MarkerCluster().add_to(m)\n",
+    "\n",
+    "#store all zipcodes latitude and longitude\n",
+    "#redundant won't be plot in the following for loop\n",
+    "locations = merge_df[['lat','lng']]\n",
+    "locationlist = locations.values.tolist()\n",
+    "\n",
+    "#store each zipcode list of dates and corresponding values\n",
+    "#the list will be reset for every zipcode in the foor loop\n",
+    "date_value_df = pd.DataFrame(index=range(len(locationlist)),columns=['date','value'])\n",
+    "\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>29.74566</td>\n",
+       "      <td>-95.82302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40.07635</td>\n",
+       "      <td>-74.20311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29.83674</td>\n",
+       "      <td>-95.73547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>40.74962</td>\n",
+       "      <td>-73.85264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29.82698</td>\n",
+       "      <td>-95.66120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7589947</th>\n",
+       "      <td>38.34413</td>\n",
+       "      <td>-78.26151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7589948</th>\n",
+       "      <td>40.91592</td>\n",
+       "      <td>-85.27923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7589949</th>\n",
+       "      <td>43.21976</td>\n",
+       "      <td>-92.10315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7589950</th>\n",
+       "      <td>39.49307</td>\n",
+       "      <td>-80.25644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7589951</th>\n",
+       "      <td>41.37385</td>\n",
+       "      <td>-93.73870</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7589952 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              lat       lng\n",
+       "0        29.74566 -95.82302\n",
+       "1        40.07635 -74.20311\n",
+       "2        29.83674 -95.73547\n",
+       "3        40.74962 -73.85264\n",
+       "4        29.82698 -95.66120\n",
+       "...           ...       ...\n",
+       "7589947  38.34413 -78.26151\n",
+       "7589948  40.91592 -85.27923\n",
+       "7589949  43.21976 -92.10315\n",
+       "7589950  39.49307 -80.25644\n",
+       "7589951  41.37385 -93.73870\n",
+       "\n",
+       "[7589952 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Zipcode  count\n",
+      "0         1001    288\n",
+      "1         1002    288\n",
+      "2         1005    288\n",
+      "3         1007    288\n",
+      "4         1008    288\n",
+      "...        ...    ...\n",
+      "26349    99827    288\n",
+      "26350    99833    288\n",
+      "26351    99835    288\n",
+      "26352    99901    288\n",
+      "26353    99929    288\n",
+      "\n",
+      "[26354 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count unique combinations of column1 and column2\n",
+    "unique_combinations_count = merge_df.groupby(['Zipcode']).size().reset_index(name='count')\n",
+    "\n",
+    "print(unique_combinations_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
